# openarmature-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  conformance.toml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: RELEASING.md  index.md  robots.txt
docs/agent/: non-obvious-shapes.md  tldr.md
docs/concepts/: checkpointing.md  composition.md  fan-out.md  graphs.md  index.md  llms.md  middleware.md  observability.md  parallel-branches.md  prompts.md  retrieval.md  state-and-reducers.md
docs/contributing/: index.md
docs/examples/: 00-hello-world.md  01-routing-and-subgraphs.md  02-explicit-subgraph-mapping.md  03-observer-hooks.md  04-nested-subgraphs.md  05-fan-out-with-retry.md  06-parallel-branches.md  07-multimodal-prompt.md  08-checkpointing-and-migration.md  09-tool-use.md  10-langfuse-observability.md  11-chat-with-multimodal.md  12-production-observability.md  chat-with-multimodal.md  checkpointing-and-migration.md  explicit-subgraph-mapping.md  fan-out-with-retry.md  hello-world.md  index.md  langfuse-observability.md  multimodal-prompt.md  nested-subgraphs.md  observer-hooks.md  parallel-branches.md  production-observability.md  routing-and-subgraphs.md  tool-use.md
docs/getting-started/: index.md  provider-authoring.md
docs/model-providers/: authoring.md  index.md  vllm.md
docs/overrides/partials/: header.html
docs/patterns/: bypass-if-output-exists.md  caller-supplied-trace-identifiers.md  index.md  observer-state-reconciliation.md  parameterized-entry-point.md  session-as-checkpoint-resume.md  state-migration-on-resume.md  tool-dispatch-as-node.md
docs/reference/: checkpoint.md  graph.md  index.md  llm.md  observability.md  prompts.md  retrieval.md
docs/retrieval-providers/: authoring.md  index.md  tei.md
docs/stylesheets/: extra.css
examples/: README.md
examples/00-hello-world/: main.py
examples/01-linear-pipeline/: main.py
examples/01-routing-and-subgraphs/: main.py
examples/02-explicit-subgraph-mapping/: main.py
examples/02-routing-and-subgraphs/: main.py
examples/03-explicit-subgraph-mapping/: main.py
examples/03-observer-hooks/: main.py
examples/04-nested-subgraphs/: main.py
examples/04-observer-hooks/: main.py
examples/05-fan-out-with-retry/: main.py
examples/05-nested-subgraphs/: main.py
examples/06-parallel-branches/: main.py
examples/07-multimodal-prompt/: main.py
examples/08-checkpointing-and-migration/: main.py
examples/09-tool-use/: main.py
examples/10-langfuse-observability/: main.py
examples/11-chat-with-multimodal/: main.py
examples/12-production-observability/: main.py
examples/chat-with-multimodal/: main.py
examples/checkpointing-and-migration/: main.py
examples/explicit-subgraph-mapping/: main.py
examples/fan-out-with-retry/: main.py
examples/hello-world/: main.py
examples/langfuse-observability/: main.py
examples/multimodal-prompt/: main.py
examples/nested-subgraphs/: main.py
examples/observer-hooks/: main.py
examples/parallel-branches/: main.py
examples/production-observability/: main.py
examples/retrieval-rag/: main.py
examples/routing-and-subgraphs/: main.py
examples/tool-use/: main.py
scripts/: build_agents_md.py  check_conformance_manifest.py
src/openarmature/: AGENTS.md  __init__.py  __main__.py  _pointer_block.md  cli.py  patterns.py
src/openarmature/_patterns/: __init__.py  bypass-if-output-exists.md  caller-supplied-trace-identifiers.md  observer-state-reconciliation.md  parameterized-entry-point.md  session-as-checkpoint-resume.md  state-migration-on-resume.md  tool-dispatch-as-node.md
src/openarmature/checkpoint/: __init__.py  errors.py  migration.py  protocol.py
src/openarmature/graph/: __init__.py  builder.py  cause_chain.py  compiled.py  edges.py  errors.py  events.py  fan_out.py  nodes.py  observer.py  parallel_branches.py  projection.py  reducers.py  state.py  subgraph.py
src/openarmature/llm/: __init__.py  errors.py  messages.py  openai.py  provider.py  response.py
src/openarmature/observability/: __init__.py  correlation.py  lineage.py  llm_event.py  metadata.py  tool_call.py
src/openarmature/prompts/: __init__.py  backend.py  context.py  errors.py  group.py  hashing.py  label_resolver.py  manager.py  prompt.py
src/openarmature/retrieval/: __init__.py  _events.py  _wire.py  provider.py  response.py
tests/: test_agents_md_drift.py  test_docs_examples.py  test_examples_smoke.py  test_production_observability_accumulators.py  test_smoke.py
tests/_helpers/: typed_event.py
tests/conformance/: _deferral.py  adapter.py  middleware_seam.py  test_checkpoint.py  test_conformance.py  test_fixture_parsing.py  test_llm_provider.py  test_observability.py  test_observability_langfuse.py  test_pipeline_utilities.py  test_prompt_management.py  test_retrieval_provider.py  test_state_migration.py  test_typed_event_harness.py
tests/conformance/harness/: __init__.py  directives.py  expectations.py  fixtures.py  llm_attribute_assertions.py  loader.py  prompt_management.py  skip.py  wire.py
tests/integration/: test_cohere_wire.py  test_jina_wire.py  test_langfuse_sdk_adapter.py  test_openai_embed_wire.py  test_otel_hyperdx_export.py  test_tei_wire.py
tests/unit/: test_checkpoint.py  test_cli.py  test_compile_errors.py  test_content_blocks.py  test_correlation.py  test_drain.py  test_failure_isolation_middleware.py  test_fan_out.py  test_generics.py  test_llm_provider.py  test_middleware.py  test_observability_langfuse.py  test_observability_langfuse_adapter.py  test_observability_metadata.py  test_observability_otel.py  test_observer.py  test_parallel_branches.py  test_patterns_api.py  test_projection.py  test_prompts.py  test_prompts_langfuse.py  test_retrieval_provider.py  test_runtime_errors.py  test_state_and_reducers.py  test_state_migration.py  test_structured_output.py  test_subgraph.py  test_tool_call.py  test_tool_choice.py
(+35 files in other folders)
