[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openarmature"
version = "0.2.0"
description = "Workflow framework for LLM pipelines and tool-calling agents."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Chris Colinsky", email = "chris@lunarcommand.xyz" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.7",
]

[project.urls]
Repository = "https://github.com/LunarCommand/openarmature-python"
Specification = "https://github.com/LunarCommand/openarmature-spec"

[tool.openarmature]
spec_version = "0.1.1"

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "pyright>=1.1.360",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
    "ruff>=0.5",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openarmature"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
