[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openarmature"
version = "0.10.0"
description = "Workflow framework for LLM pipelines and tool-calling agents."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Chris Colinsky", email = "chris@lunarcommand.xyz" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Spec observability §6 OTel mapping. Optional per charter §3.1
# principle 5 — backend mappings are pluggable rather than core
# dependencies. Plan to lift into a sibling ``openarmature-otel``
# package at v1.0 launch alongside ``openarmature-eval``.
otel = [
    "opentelemetry-api>=1.27,<3",
    "opentelemetry-sdk>=1.27,<3",
    # Provides ``LoggingHandler`` after the SDK's deprecation
    # of ``opentelemetry.sdk._logs.LoggingHandler``. No upper
    # bound — the contrib repo cycles fast on minor releases
    # below 1.0; revisit when 1.0 lands.
    "opentelemetry-instrumentation-logging>=0.62.0b1",
]
# Spec observability §8 Langfuse mapping. Optional per charter §3.1
# principle 5; matches the [otel] extras' shape. Validated against
# Langfuse Python SDK 4.6.x; bridge from the SDK's v4 API onto the
# LangfuseClient Protocol lives in ``observability.langfuse.adapter``.
langfuse = [
    "langfuse>=4.6,<5",
]

[project.urls]
Repository = "https://github.com/LunarCommand/openarmature-python"
Specification = "https://github.com/LunarCommand/openarmature-spec"

[project.scripts]
openarmature = "openarmature.cli:main"

[tool.openarmature]
spec_version = "0.34.0"

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "pyright>=1.1.360",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-examples>=0.0.13",
    "pyyaml>=6.0",
    "ruff>=0.5",
    "types-pyyaml",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material[imaging]>=9.5,<10",
    "mkdocstrings[python]>=0.27,<1",
    "pymdown-extensions>=10.0,<11",
    "mkdocs-glightbox>=0.4,<1",
    "mkdocs-llmstxt>=0.1,<1",
]
# Deps for the runnable demos under ``examples/``. The demos call out to
# an OpenAI-compatible LLM endpoint, so ``openai`` is the one extra
# they need beyond the core package.
examples = [
    "openai>=1.40",
]
# Self-references the project's public otel + langfuse extras so the
# observability backends can be defaulted into the local env: uv can
# default dependency groups but not extras.
observability = ["openarmature[otel,langfuse]"]

[tool.uv]
# Default-synced env for local work so a plain `uv run` (mkdocs
# serve, the examples, pytest) needs no per-command flags. Naming
# default-groups overrides uv's built-in ["dev"] default, hence "dev"
# is re-listed. The "observability" group carries the otel/langfuse
# extras, which uv otherwise can't default.
default-groups = ["dev", "docs", "examples", "observability"]

[tool.hatch.build.targets.wheel]
packages = ["src/openarmature"]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# Underscore-prefixed names are conventionally "package-private" — used
# across sibling modules within `openarmature.graph` but not part of the
# public API (which is enforced by `__all__`). Pyright's strict default
# treats them as module-private; turn it off so legitimate cross-module
# package-private imports don't need per-line ignores.
reportPrivateUsage = false

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["openarmature-spec"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Opt-in markers for tests that hit real external services. CI skips
# these by default — run with `-m integration` to include them after
# setting the relevant env vars (LANGFUSE_PUBLIC_KEY / SECRET_KEY for
# Langfuse Cloud, etc).
markers = [
    "integration: tests that exercise real external services (Langfuse Cloud, HyperDX). Skipped by default.",
]
addopts = ["-m", "not integration"]
